# pytest-flake8dir

./: HISTORY.rst  MANIFEST.in  README.rst  pytest_flake8dir.py  requirements.in  requirements.txt  setup.cfg  setup.py  test_pytest_flake8dir.py  tox.ini
requirements/: py310.txt  py35.txt  py36.txt  py37.txt  py38.txt  py39.txt  requirements.in
src/: pytest_flake8dir.py
src/pytest_flake8dir/: __init__.py
tests/: test_pytest_flake8dir.py
