[metadata]
name = pytest-flake8dir
version = 2.2.0
description = A pytest fixture for testing flake8 plugins.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Adam Johnson
author_email = me@adamj.eu
url = https://github.com/adamchainz/pytest-flake8dir
project_urls =
    Changelog = https://github.com/adamchainz/pytest-flake8dir/blob/master/HISTORY.rst
    Twitter = https://twitter.com/adamchainz
license = ISC License
keywords = pytest, flake8
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: ISC License (ISCL)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license_file = LICENSE

[options]
package_dir=
    =src
py_modules = pytest_flake8dir
include_package_data = True
install_requires =
    flake8
    pytest
python_requires = >=3.5
zip_safe = False

[options.entry_points]
pytest11 =
    flake8dir = pytest_flake8dir

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203,E501,W503

[isort]
include_trailing_comma = True
force_grid_wrap = 0
known_first_party = pytest_flake8dir
line_length = 88
multi_line_output = 3
use_parentheses = True
