[metadata]
name = pytest-flake8dir
version = 2.6.1
description = A pytest fixture for testing flake8 plugins.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Adam Johnson
author_email = me@adamj.eu
url = https://github.com/adamchainz/pytest-flake8dir
project_urls =
    Changelog = https://github.com/adamchainz/pytest-flake8dir/blob/main/HISTORY.rst
    Twitter = https://twitter.com/adamchainz
license = MIT
keywords = pytest, flake8
classifiers =
    Development Status :: 7 - Inactive
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license_file = LICENSE

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =
    flake8
    pytest
python_requires = >=3.6
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
pytest11 =
    flake8dir = pytest_flake8dir

[flake8]
max-line-length = 80
select = E,F,W,B,B950,C,I
ignore = E203,E501,W503
